Dockerfile changed to use maven official image

--- a/src/carts/Dockerfile
+++ b/src/carts/Dockerfile
@@ -1,34 +1,41 @@
+##### Application Metadata
 ARG APPLICATION_NAME="carts"
 ARG VERSION="0.0.1-SNAPSHOT"
-
-# ------------
-# Stage 1 : Setting up the build environment
-# the base image used is a maven repo image with JDBC drivers pre-populated. 
-# 
-# 
-FROM oraclelinux:7-slim as buildenv
-
-ARG JDBC_GROUP_ID="com.oracle.jdbc"
-ARG JDBC_DRIVER_ARTIFACT_ID="ojdbc8"
 ##### Oracle Instant Client version
 ARG JDBC_DRIVER_VERSION="19.3"
-##### Gradle version
-ARG GRADLE_VERSION=5.5.1
 
-ENV JAVA_HOME /usr/lib/jvm/java-openjdk
-ENV GRADLE_HOME /opt/gradle
+# ------------
+# Stage 1 : Download Oracle JDBC drivers. 
+# 
+# 
+FROM oraclelinux:7-slim as oracleinstantclientjdbc
+
+ARG JDBC_DRIVER_VERSION
 
 RUN yum update -y && \
-  yum -y install unzip && \
-  yum -y install java-1.8.0-openjdk-devel && \
   yum -y install oracle-release-el7 && \
-  yum-config-manager --add-repo http://repos.fedorapeople.org/repos/dchen/apache-maven/epel-apache-maven.repo && \
-  yum-config-manager --enable epel-apache-maven && \
-  yum install -y apache-maven && \
   yum-config-manager --enable ol7_oracle_instantclient && \
   yum -y install oracle-instantclient${JDBC_DRIVER_VERSION}-jdbc && \
   yum clean all && \
   rm -rf /var/cache/yum
+
+#
+# ------------
+
+# ------------
+# Stage 2 : Setting up the build environment with maven and gradle
+# 
+# 
+FROM maven:3.6-jdk-8 as buildenv
+
+ARG JDBC_DRIVER_VERSION
+ARG JDBC_GROUP_ID="com.oracle.jdbc"
+ARG JDBC_DRIVER_ARTIFACT_ID="ojdbc8"
+ARG GRADLE_VERSION=5.5.1
+
+ENV GRADLE_HOME /opt/gradle
+
+COPY --from=oracleinstantclientjdbc /usr/lib/oracle/${JDBC_DRIVER_VERSION}/client64/lib/ojdbc8.jar /usr/lib/oracle/${JDBC_DRIVER_VERSION}/client64/lib/ojdbc8.jar
 
 RUN mvn install:install-file -Dfile=/usr/lib/oracle/${JDBC_DRIVER_VERSION}/client64/lib/ojdbc8.jar -DgroupId=${JDBC_GROUP_ID} -DartifactId=${JDBC_DRIVER_ARTIFACT_ID} -Dversion=${JDBC_DRIVER_VERSION} -Dpackaging=jar
 
@@ -51,18 +58,17 @@ RUN echo "Installing Gradle" && \
     gradle --version
 
 COPY settings.gradle /usr/src/app
-RUN gradle wrapper --gradle-version ${GRADLE_VERSION} --distribution-type all
-RUN ./gradlew --refresh-dependencies
+RUN gradle --refresh-dependencies
 #
 # copy buildscript and cache all dependencies
 # 
 COPY build.gradle /usr/src/app
-RUN ./gradlew --refresh-dependencies
+RUN gradle --refresh-dependencies
 #
 # ------------
 
 # ------------
-# Stage 2 : Build the application
+# Stage 3 : Build the application
 #
 #
 FROM buildenv as appbuild
@@ -78,14 +84,14 @@ COPY src /usr/src/app/src
 #
 # Install the application
 #
-RUN ./gradlew clean bootJar 
+RUN gradle clean bootJar 
 RUN ls -ltr /usr/src/app/build/libs
 
 #
 # ------------
 
 # ------------
-# Stage 3 : Application container
+# Stage 4 : Application container
 #
 FROM openjdk:8-jre-slim
 ARG APPLICATION_NAME
