--- a/src/orders/docker-compose-zipkin.yml
+++ b/src/orders/docker-compose-zipkin.yml
@@ -2,8 +2,7 @@ version: '2'
 
 services:
   orders:
-#    image: aurademos/durhamdenim/orders
-    image: oracleateam/orders
+    image: mushop/orders
     hostname: orders
     restart: always
     cap_drop:
