--- a/src/orders/src/main/resources/application.properties
+++ b/src/orders/src/main/resources/application.properties
@@ -10,13 +10,10 @@ management.endpoint.metrics.enabled=true
 management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
 
-
-#spring.datasource.url=jdbc:oracle:thin:@appdb_tp?TNS_ADMIN=./config
-spring.datasource.url=jdbc:oracle:thin:@${OADB_SERVICE}?TNS_ADMIN=./config
+spring.datasource.url=jdbc:oracle:thin:@${OADB_SERVICE}?TNS_ADMIN=${TNS_ADMIN}
 spring.datasource.username=${OADB_USER}
 spring.datasource.password=${OADB_PW}
 spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 
 spring.jpa.show-sql=true
