--- a/src/storefront/nginx/default.conf
+++ b/src/storefront/nginx/default.conf
@@ -28,17 +28,23 @@ server {
         application/json
         application/xml
         application/rss+xml
+        image/x-icon
         image/svg+xml;
+
 
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
-    }
 
-    location /images/ {
-        expires 1h;
-        add_header Cache-Control "public, no-transform";
-        root   /usr/share/nginx/html;
+        location ~ ^/images|scripts|styles/ {
+            expires 2d;
+            add_header Cache-Control "public, no-transform";
+        }
+
+        location = /favicon.ico {
+            expires max;
+            add_header Cache-Control "public, no-transform";
+        }
     }
 
     error_page  404              /404.html;
