--- a/src/storefront/package.json
+++ b/src/storefront/package.json
@@ -6,7 +6,7 @@
     "start": "gulp",
     "server": "gulp server",
     "watch": "gulp watch",
-    "build": "gulp build --production",
+    "build": "gulp build:prod --production",
     "lint": "eslint .",
     "test": "jest"
   },
@@ -36,8 +36,11 @@
     "gulp-less": "^4.0.1",
     "gulp-postcss": "^7.0.1",
     "gulp-pug": "^4.0.1",
+    "gulp-rev": "^9.0.0",
+    "gulp-rev-replace": "^0.4.4",
     "gulp-util": "^3.0.8",
     "http-proxy-middleware": "^0.19.1",
+    "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^6.0.0",
     "jest": "^24.8.0",
     "webpack-stream": "^5.2.1"
