--- a/src/storefront/package.json
+++ b/src/storefront/package.json
@@ -14,7 +14,7 @@
     "axios": "^0.19.0",
     "core-js": "^3.0.1",
     "echarts": "^4.2.1",
-    "uikit": "^3.1.4"
+    "uikit": "3.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
