increased asset expiry, and bumped ver

--- a/src/storefront/nginx/default.conf
+++ b/src/storefront/nginx/default.conf
@@ -37,7 +37,7 @@ server {
         index  index.html index.htm;
 
         location ~ ^/images|scripts|styles/ {
-            expires 2d;
+            expires 1w;
             add_header Cache-Control "public, no-transform";
         }
 
