--- a/wercker.yml
+++ b/wercker.yml
@@ -40,9 +40,7 @@ push-to-registry:
     - script:
         name: Setup image tag
         code: |
-          export tmptag=$(echo $WERCKER_GIT_COMMIT | head -c 7)-$WERCKER_GIT_BRANCH
-          # Replace all / with -
-          export IMAGE_TAG=${IMAGE_TAG////-}
+          export IMAGE_TAG=$(echo $WERCKER_GIT_COMMIT | head -c 7)-$WERCKER_GIT_BRANCH
           echo Using tag $IMAGE_TAG
     - internal/docker-push:
         tag: $IMAGE_TAG
