CNS-32: mock oci-dependent services

--- a/src/api/Makefile
+++ b/src/api/Makefile
@@ -22,13 +22,32 @@ deps:
 		$(IMAGE) /usr/local/bin/npm install
 
 # Runs the Node.js application in a Docker container
-server:
+server: kill-server 
 	@docker run               \
 		-d                      \
 		--rm										\
 		--name $(CONTAINER)     \
 		-v $$PWD:/usr/src/app   \
 		-P                      \
+		-e NODE_ENV=development \
+		-e CATALOGUE_URL=http://catalogue \
+		-e CARTS_URL=http://carts \
+		-e ORDERS_URL=http://orders \
+		-e USERS_URL=http://user \
+		-e PORT=3000            \
+		-p 8080:3000            \
+		-p 9229:9229            \
+		--network mutest_default  \
+		$(IMAGE) supper --inspect -i node_modules server.js
+
+mock: kill-server 
+	@docker run               \
+		-d                      \
+		--rm										\
+		--name $(CONTAINER)     \
+		-v $$PWD:/usr/src/app   \
+		-P                      \
+		-e MOCK_MODE=true				\
 		-e NODE_ENV=development \
 		-e CATALOGUE_URL=http://catalogue \
 		-e CARTS_URL=http://carts \
