Updates to mock mode in api chart

--- a/deploy/helm-chart/mushop/charts/api/templates/api-deployment.yaml
+++ b/deploy/helm-chart/mushop/charts/api/templates/api-deployment.yaml
@@ -26,6 +26,8 @@ spec:
             - name: http
               containerPort: 3000
           env:
+          - name: MOCK_MODE
+            value: {{ .Values.mock.service }}
           - name: SESSION_REDIS
             value: {{ .Release.Name }}-session
           - name: CATALOGUE_URL
