--- a/deploy/helm-chart/mushop/charts/stream/templates/stream-deployment.yaml
+++ b/deploy/helm-chart/mushop/charts/stream/templates/stream-deployment.yaml
@@ -14,7 +14,7 @@ spec:
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ include "api.name" . }}
+        app.kubernetes.io/name: {{ include "stream.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
         run: {{ include "stream.name" . }}
     spec:
