Support mock mode in Helm
With this change, you can simple run `helm install mushop --name mymushop --set global.mock.service="all"` to mock all services!

--- a/deploy/helm-chart/mushop/charts/api/templates/api-deployment.yaml
+++ b/deploy/helm-chart/mushop/charts/api/templates/api-deployment.yaml
@@ -27,7 +27,7 @@ spec:
               containerPort: 3000
           env:
           - name: MOCK_MODE
-            value: {{ .Values.mock.service }}
+            value: {{ .Values.global.mock.service }}
           - name: SESSION_REDIS
             value: {{ .Release.Name }}-session
           - name: CATALOGUE_URL
