--- a/deploy/helm-chart/mushop/templates/streams-secret.yaml
+++ b/deploy/helm-chart/mushop/templates/streams-secret.yaml
@@ -6,6 +6,15 @@ metadata:
 {{ include "mushop.labels" . | indent 4 }}
 type: Opaque
 data:
+  {{ if eq .Values.global.mock.service "all" }}
+  oci_compartment_id: {{ "mock" | b64enc }}
+  oci_tenant_id: {{ "mock" | b64enc }}
+  oci_user_id: {{ "mock" | b64enc }}
+  oci_fingerprint: {{ "mock" | b64enc }}
+  oci_region: {{ "mock" | b64enc }}
+  oci_pass_phrase:  {{ "mock" | b64enc }}
+  oci_api_key:  {{ "mock" | b64enc }}
+  {{ else }}  
   oci_compartment_id: {{ required "Value .secrets.oci.compartmentId is required!" .Values.secrets.oci.compartmentId | b64enc }}
   oci_tenant_id: {{ required "Value .secrets.oci.tenantId is required!" .Values.secrets.oci.tenantId | b64enc }}
   oci_user_id: {{ required "Value .secrets.oci.userId is required!" .Values.secrets.oci.userId | b64enc }}
@@ -14,3 +23,4 @@ data:
   oci_pass_phrase: {{ required "Value .secrets.oci.passphrase is required!" .Values.secrets.oci.passphrase | b64enc }}
   oci_api_key: |-
     {{ (.Files.Get "secrets/oci_api_key.pem") | b64enc }}
+  {{ end }}
