--- a/deploy/helm-chart/mushop/charts/catalogue/templates/secret.yaml
+++ b/deploy/helm-chart/mushop/charts/catalogue/templates/secret.yaml
@@ -6,6 +6,12 @@ metadata:
 {{ include "catalogue.labels" . | indent 4 }}
 type: Opaque
 data:
+  {{ if eq .Values.global.mock.service "all" }}
+  oadb_pw: {{ "mock" | b64enc }}
+  oadb_service: {{ "mock"| b64enc }}
+  oadb_user: {{ "mock" | b64enc }}
+  {{ else }}  
   oadb_pw: {{ required "Value .secrets.oadbPassword is required!" .Values.secrets.oadbPassword | b64enc }}
   oadb_service: {{ .Values.secrets.oadbService | b64enc }}
   oadb_user: {{ .Values.secrets.oadbUser | b64enc }}
+  {{ end }}
