--- a/deploy/helm-chart/mushop/charts/orders/templates/secret.yaml
+++ b/deploy/helm-chart/mushop/charts/orders/templates/secret.yaml
@@ -6,6 +6,20 @@ metadata:
 {{ include "orders.labels" . | indent 4 }}
 type: Opaque
 data:
+  {{ if eq .Values.global.mock.service "all" }}
+  oadb_pw: {{ "mock" | b64enc }}
+  oadb_service: {{ "mock"| b64enc }}
+  oadb_user: {{ "mock" | b64enc }}
+  trust_pass: {{ "mock" | b64enc }}
+  key_pass: {{ "mock" | b64enc }}
+  oci_api_key: {{ "mock" | b64enc }}
+  cwallet.sso: {{ "mock" | b64enc }}
+  ewallet.p12: {{ "mock" | b64enc }}
+  keystore.jks: {{ "mock" | b64enc }}
+  sqlnet.ora: {{ "mock" | b64enc }}
+  tnsnames.ora: {{ "mock" | b64enc }}
+  truststore.jks: {{ "mock" | b64enc }}
+  {{ else }}  
   oadb_pw: {{ required "Value .secrets.oadbPassword is required!" .Values.secrets.oadbPassword | b64enc }}
   oadb_service: {{ .Values.secrets.oadbService | b64enc }}
   oadb_user: {{ .Values.secrets.oadbUser | b64enc }}
@@ -25,3 +39,4 @@ data:
     {{ (.Files.Get "secrets/tnsnames.ora") | b64enc }}
   truststore.jks: |-
     {{ (.Files.Get "secrets/truststore.jks") | b64enc }}
+  {{ end }}
