Updated image tags for orders and carts in helm chart to use semver

--- a/deploy/helm-chart/mushop/charts/carts/values.yaml
+++ b/deploy/helm-chart/mushop/charts/carts/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 
 image:
   repository: phx.ocir.io/intvravipati/mushop/carts
-  tag: latest
+  tag: 1.0
   pullPolicy: Always
 
 secrets:
