--- a/deploy/helm-chart/mushop/charts/orders/values.yaml
+++ b/deploy/helm-chart/mushop/charts/orders/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 
 image:
   repository: phx.ocir.io/intvravipati/mushop/orders
-  tag: latest
+  tag: 1.0
   pullPolicy: Always
 
 secrets:
