--- a/src/catalogue/docker/docker-compose.yml
+++ b/src/catalogue/docker/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2'
 services:
     catalogue:
         build:
-            context: .
+            context: ..
             dockerfile: ./Dockerfile
         image: mushop/catalogue
         hostname: catalogue
