catalogue proxy entry as backup

--- a/deploy/micro/httpd.conf
+++ b/deploy/micro/httpd.conf
@@ -159,6 +159,9 @@ DocumentRoot "/app/storefront"
 ProxyPass "/api"  "http://localhost:3000"
 ProxyPassReverse "/api"  "http://localhost:3000"
 
+ProxyPass "/catalogue"  "http://localhost:3005/catalogue"
+ProxyPassReverse "/catalogue"  "http://localhost:3005/catalogue"
+
 #
 # DirectoryIndex: sets the file that Apache will serve if a directory
 # is requested.
