Mounting all files from the secret to a folder overwrites any existing files in that folder + splitting the OCI secrets for service broker and stream
The fix here is to individually mount files to the folder using subPath. That way we don't overwrite the ojdbc.properties file that's baked in to the container.

--- a/deploy/helm-chart/mushop/charts/carts/templates/carts-deployment.yaml
+++ b/deploy/helm-chart/mushop/charts/carts/templates/carts-deployment.yaml
@@ -58,7 +58,16 @@ spec:
           volumeMounts:
             - mountPath: /tmp
               name: tmp-volume
-            - mountPath: /config
+            - mountPath: /app/config/keystore.jks
+              subPath: keystore.jks
+              name: wallet
+              readOnly: true
+            - mountPath: /app/config/truststore.jks
+              subPath: truststore.jks
+              name: wallet
+              readOnly: true
+            - mountPath: /app/config/tnsnames.ora
+              subPath: tnsnames.ora
               name: wallet
               readOnly: true
       volumes:
