--- a/deploy/helm-chart/mushop/templates/service-broker-secret.yaml
+++ b/deploy/helm-chart/mushop/templates/service-broker-secret.yaml
@@ -15,11 +15,11 @@ data:
   passphrase: {{ "mock" | b64enc }}
   privatekey: {{ "mock" | b64enc }}
   {{ else }}
-  tenancy: {{ required "Value .secrets.oci.tenantId is required!" .Values.secrets.oci.tenantId | b64enc }}
-  user: {{ required "Value .secrets.oci.userId is required!" .Values.secrets.oci.userId | b64enc }}
-  fingerprint: {{ required "Value .secrets.oci.fingerprint is required!" .Values.secrets.oci.fingerprint | b64enc }}
-  region: {{ required "Value .secrets.oci.region is required!" .Values.secrets.oci.region | b64enc }}
-  passphrase: {{ required "Value .secrets.oci.passphrase is required!" .Values.secrets.oci.passphrase | b64enc }}
+  tenancy: {{ required "Value .secrets.serviceBroker.tenantId is required!" .Values.secrets.serviceBroker.tenantId | b64enc }}
+  user: {{ required "Value .secrets.serviceBroker.userId is required!" .Values.secrets.serviceBroker.userId | b64enc }}
+  fingerprint: {{ required "Value .secrets.serviceBroker.fingerprint is required!" .Values.secrets.serviceBroker.fingerprint | b64enc }}
+  region: {{ required "Value .secrets.serviceBroker.region is required!" .Values.secrets.serviceBroker.region | b64enc }}
+  passphrase: {{ required "Value .secrets.serviceBroker.passphrase is required!" .Values.secrets.serviceBroker.passphrase | b64enc }}
   privatekey: |-
-    {{ (.Files.Get "secrets/oci_api_key.pem") | b64enc }}
+    {{ (.Files.Get "secrets/oci_service_broker_api_key.pem") | b64enc }}
   {{ end }}
