--- a/deploy/helm-chart/mushop/values-dev.yaml
+++ b/deploy/helm-chart/mushop/values-dev.yaml
@@ -16,7 +16,7 @@ carts:
   image:
     repository: <IMAGE NAME HERE>
     tag: <IMAGE TAG HERE>
-    imagePullPolicy: Never
+    pullPolicy: Never
   secrets:
     oadbPassword: <PASSWORD HERE>
     trustPass: <PASSWORD HERE>
@@ -27,7 +27,7 @@ orders:
   image:
     repository: <IMAGE NAME HERE>
     tag: <IMAGE TAG HERE>
-    imagePullPolicy: Never
+    pullPolicy: Never
   secrets:
     oadbPassword: <PASSWORD HERE>
     trustPass: <PASSWORD HERE>
@@ -63,7 +63,7 @@ user-db:
   enabled: true
 
 secrets:
-  oci:
+  streams:
     compartmentId: <OCI_COMPARTMENT_ID>
     tenantId: <OCI_TENANT_ID>
     userId: <OCI_USER_ID>
