--- a/deploy/helm-chart/mushop/values.yaml
+++ b/deploy/helm-chart/mushop/values.yaml
@@ -48,8 +48,14 @@ user-db:
   enabled: true
 
 secrets:
-  oci:
+  streams:
     compartmentId:
+    tenantId:
+    userId:
+    fingerprint:
+    region:
+    passphrase:
+  serviceBroker:
     tenantId:
     userId:
     fingerprint:
